--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/veudemy
-CLERK_WEBHOOK_SECRET = ""
+MONGODB_URI="mongodb://127.0.0.1:27017/veudemy"
+CLERK_WEBHOOK_SECRET = "whsec_jB4lHNkYUiGvCvFrfOqo0wYMXgspLqh1"
+CLERK_PUBLISHABLE_KEY=pk_test_bGFzdGluZy1jcmFuZS05MC5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_gKjq9TQQX5B3U0mBJBl8W3ZavIFyDqbeiCdXSboWHp
